--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/LunaRossie/Team_Profile_Genarator--#readme",
   "dependencies": {
+    "inquirer": "^8.2.4",
     "jest": "^28.1.0"
   }
 }
